--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -23,24 +23,22 @@
   },
   "permissions": [
     "notifications",
-    "tabs"
+    "tabs",
+    "http://*/*",
+    "https://*/*",
+    "activeTab",
+    "<all_urls>"
   ],
   "content_scripts": [
     {
       "matches": [
-        "https://www.google.com/*"
+        "<all_urls>"
       ],
       "css": [
-        "src/inject/inject.css"
-      ]
-    },
-    {
-      "matches": [
-        "https://www.google.com/*"
-      ],
-      "js": [
+        "src/inject/inject.css",
         "src/inject/inject.js"
       ]
     }
-  ]
+  ],
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
