--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -5,9 +5,9 @@
   "description": "Your royal guard against Fake News",
   "homepage_url": "https://github.com/imwaihon/einherjar",
   "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "icons/logo.png",
+    "48": "icons/logo.png",
+    "128": "icons/logo.png"
   },
   "default_locale": "en",
   "background": {
@@ -17,7 +17,7 @@
     "persistent": true
   },
   "browser_action": {
-    "default_icon": "icons/icon19.png",
+    "default_icon": "icons/logo.png",
     "default_title": "browser action demo",
     "default_popup": "src/browser_action/browser_action.html"
   },
